--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@ body {
   overflow-x: hidden;
 }
 
+.aside {
+  @apply fixed;
+}
+
 .tyms {
   font-family: 'Noto sans';
 }
